Prevent horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
-* {
+*, html, body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
     background-color: #fff;
     min-height: 100vh;
-    overflow-x: hidden;
+    position: relative;
 }
 
 /* header */
